added html to the pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>hi</h1>
+    <h1>😎 Oi,</h1>
+    <p>
+      Meu nome e Hazel. Prazer em conhecer voce. Eu amo chocolate, pizza , ice
+      cream e korean series
+    </p>
+    see me <a href="/photo.html">here</a>
+    <a href="/contact.html">contact me</a>
   </body>
 </html>
