--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
-  <body>
+  <body class="homepage">
     <h1>😎 Oi,</h1>
     <p>
       Meu nome e Hazel. Prazer em conhecer voce. Eu amo chocolate, pizza , ice
