--- a/photo.html
+++ b/photo.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <p>Lets get in touch <a href="/contact.html">here</a></p>
-    <img src="/images/hazel.jpg" alt="" />
+    <img src="/images/hazel.jpg" class="img-fluid" />
     aren't I cute?
     <a href="/index.html">Back to hompepage</a>
   </body>
