--- a/contact.html
+++ b/contact.html
@@ -2,20 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="/srcc/style.css" />
+    <title>Contact us</title>
   </head>
   <body>
-    <h4>Contact info:</h4>
-    cell: 0972024724
-    <a href="mailto:silweyahazelruth@gmail.com">email me</a>
-    <a href="/index.html">Back to homepage</a>
-    see me <a href="/photo.html">here</a>
+    <h1>🥐 Contact us</h1>
+    <p>
+      Email us at
+      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
+    </p>
+    <footer>
+      <a href="/"> Homepage</a>
+      <a href="/photo.html"> Photo</a>
+      <a href="/contact.html"> Contact</a>
+    </footer>
   </body>
 </html>
