--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
+    <title>Croissant</title>
   </head>
-  <body class="homepage">
-    <h1>😎 Oi,</h1>
+  <body>
+    <h1>🥐 Croissant</h1>
     <p>
-      Meu nome e Hazel. Prazer em conhecer voce. Eu amo chocolate, pizza , ice
-      cream e korean series
+      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
+      named for its historical crescent shape. Croissants and other viennoiserie
+      are made of a layered yeast-leavened dough
     </p>
-    see me <a href="/photo.html">here</a>
-    <a href="/contact.html">contact me</a>
+    <footer>
+      <a href="/"> Homepage</a>
+      <a href="/photo.html"> Photo</a>
+      <a href="/contact.html"> Contact</a>
+    </footer>
   </body>
 </html>
