--- a/photo.html
+++ b/photo.html
@@ -2,19 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=
+  , initial-scale=1.0"
     />
+    <link rel="stylesheet" href="/src/style.css" />
+    <title>Croissant</title>
   </head>
   <body>
-    <p>Lets get in touch <a href="/contact.html">here</a></p>
-    <img src="/images/hazel.jpg" class="img-fluid" />
-    aren't I cute?
-    <a href="/index.html">Back to hompepage</a>
+    <h1>🥐 A picture of a croissant</h1>
+    <img src="/images/croissant.jpeg" alt="" class="croissant-photo" />
+    <footer>
+      <a href="/"> Homepage</a>
+      <a href="/photo.html"> Photo</a>
+      <a href="/contact.html"> Contact</a>
+    </footer>
   </body>
 </html>
