--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="All about croissants" />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Croissant</title>
+    <title>Croissants- croissant.com</title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
@@ -16,8 +17,10 @@
     </p>
     <footer>
       <a href="/"> Homepage</a>
-      <a href="/photo.html"> Photo</a>
-      <a href="/contact.html"> Contact</a>
+      <a href="/photo.html" title="photo"> Photo of a croissant</a>
+      <a href="/contact.html" title="contact-details">
+        Contact us to find out more information about croissants</a
+      >
     </footer>
   </body>
 </html>
