--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       are made of a layered yeast-leavened dough
     </p>
     <footer>
-      <a href="/"> Homepage</a>
+      <a href="/" title="homepage"> Homepage</a>
       <a href="/photo.html" title="photo"> Photo of a croissant</a>
       <a href="/contact.html" title="contact-details">
         Contact us to find out more information about croissants</a
