--- a/photo.html
+++ b/photo.html
@@ -8,16 +8,21 @@
       content="width=
   , initial-scale=1.0"
     />
+    <meta name="description" content="describing how a croissant looks" />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Croissant</title>
+    <title>Croissant photo - croissant.com</title>
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
-    <img src="/images/croissant.jpeg" alt="" class="croissant-photo" />
+    <img
+      src="/images/croissant.jpeg"
+      alt="photo of a croissant"
+      class="croissant-photo"
+    />
     <footer>
       <a href="/"> Homepage</a>
-      <a href="/photo.html"> Photo</a>
-      <a href="/contact.html"> Contact</a>
+      <a href="/photo.html"> Photo of a croissant</a>
+      <a href="/contact.html"> Contact us to learn more about croissant</a>
     </footer>
   </body>
 </html>
